@@ -10,6 +10,9 @@
 	PSEUDO_STATBUF buf;
         int save_errno = errno;
 
+	/* mask out mode bits appropriately */
+	mode = mode & ~pseudo_umask;
+
 #ifdef PSEUDO_NO_REAL_AT_FUNCTIONS
 	if (dirfd != AT_FDCWD) {
 		errno = ENOSYS;
